src/renderer/themes.css
/* ... */
.pastelPink {
  --primary-text-color: #1f002b;
  --secondary-text-color: #361836;
  --tertiary-text-color: #5a285a;
  --title-color: #185eb4;
  --bg-color: #ffeadd;
  --favorite-icon-color: #760278;
  --card-bg-color: #ffd1dc;
  --secondary-card-bg-color: #fff;
  --scrollbar-color: #f5c8d3;
  --scrollbar-color-hover: #760278;
  --scrollbar-text-color-hover: var(--scrollbar-color);
  --side-nav-color: #ffd1dc;
  --side-nav-hover-color: #cef4f1;
  --side-nav-active-color: #3124e7;
  --side-nav-active-text-color: #ffff;
  --search-bar-color: #fff0dd;
  --logo-icon: url('../../_icons/iconBlackSmall.svg');
  --logo-text: url('../../_icons/textBlackSmall.svg');
}

.catppuccinMocha {
  --primary-text-color: #cdd6f4;
  --secondary-text-color: #bac2de;
  --tertiary-text-color: #a6adc8;
  --title-color: #cdd6f4;
  --bg-color: #1e1e2e;
  --favorite-icon-color: #0f0;
  --card-bg-color: #181825;
  --secondary-card-bg-color: #1e1e2e;
  --scrollbar-color: #313244;
  --scrollbar-color-hover: #3d4051;
  --side-nav-color: #181825;
  --side-nav-hover-color: #11111b;
  --side-nav-active-color: #11111b;
  --search-bar-color: #313244;
  --logo-icon: url('../../_icons/iconCatppuccinMochaLightSmall.svg');
  --logo-text: url('../../_icons/textCatppuccinMochaLightSmall.svg');
}

.dracula {
  --primary-text-color: #f8f8f2;
  --secondary-text-color: #c6cee6;
  --tertiary-text-color: #e5e8f3;
  --title-color: #bd93f9;
  --bg-color: #282a36;
  --favorite-icon-color: #0f0;
  --card-bg-color: #33353f;
  --secondary-card-bg-color: #282a36;
  --scrollbar-color: #44475a;
  --scrollbar-color-hover: #3d4051;
  --side-nav-color: #33353f;
  --side-nav-hover-color: #57596b;
  --side-nav-active-color: #3d4051;
  --search-bar-color: #3e3f4a;
  --logo-icon: url('../../_icons/iconDraculaLightSmall.svg');
  --logo-text: url('../../_icons/textDraculaLightSmall.svg');
}

.solarizedDark {
  --primary-text-color: #fdf6e3;
  --secondary-text-color: #ddd6c3;
  --tertiary-text-color: #ddd6c3;
  --title-color: #fdf6e3;
  --bg-color: #002b36;
  --favorite-icon-color: #0f0;
  --card-bg-color: #204b56;
  --secondary-card-bg-color: #102b36;
  --scrollbar-color: #608b96;
  --scrollbar-color-hover: #406b76;
  --side-nav-color: #204b56;
  --side-nav-hover-color: #608b96;
  --side-nav-active-color: #406b76;
  --search-bar-color: #073642;
  --logo-icon: url('../../_icons/iconSolarizedLightSmall.svg');
  --logo-text: url('../../_icons/textSolarizedLightSmall.svg');
}

.solarizedLight {
  --primary-text-color: #002b36;
  --secondary-text-color: #204b56;
  --tertiary-text-color: #204b56;
  --title-color: #002b36;
  --bg-color: #fdf6e3;
  --favorite-icon-color: #0f0;
  --card-bg-color: #eee8d5;
  --secondary-card-bg-color: #fdf6e3;
  --scrollbar-color: #a9a895;
  --scrollbar-color-hover: #839496;
  --side-nav-color: #eee8d5;
  --side-nav-hover-color: #fdf6e3;
  --side-nav-active-color: #839496;
  --search-bar-color: #c9c8b5;
  --logo-icon: url('../../_icons/iconSolarizedDarkSmall.svg');
  --logo-text: url('../../_icons/textSolarizedDarkSmall.svg');
}

.gruvboxDark {
  --primary-text-color: #ebdbb2;
  --secondary-text-color: #d5c4a1;
  --tertiary-text-color: #d5c4a1;
  --title-color: #ebdbb2;
  --bg-color: #282828;
  --favorite-icon-color: #0f0;
  --card-bg-color: #504945;
  --secondary-card-bg-color: #3c3836;
  --scrollbar-color: #665c54;
  --scrollbar-color-hover: #282828;
  --side-nav-color: #504945;
  --side-nav-hover-color: #665c54;
  --side-nav-active-color: #504945;
  --search-bar-color: #1d2021;
  --logo-icon: url('../../_icons/iconGruvboxLightSmall.svg');
  --logo-text: url('../../_icons/textGruvboxLightSmall.svg');
}

.gruvboxLight {
  --primary-text-color: #3c3836;
  --secondary-text-color: #282828;
  --tertiary-text-color: #282828;
  --title-color: #3c3836;
  --bg-color: #fbf1c7;
  --favorite-icon-color: #0f0;
  --card-bg-color: #ebdbb2;
  --secondary-card-bg-color: #d5c4a1;
  --scrollbar-color: #bdae93;
  --scrollbar-color-hover: #fbf1c7;
  --side-nav-color: #ebdbb2;
  --side-nav-hover-color: #bdae93;
  --side-nav-active-color: #ebdbb2;
  --search-bar-color: #a89984;
  --logo-icon: url('../../_icons/iconGruvboxDarkSmall.svg');
  --logo-text: url('../../_icons/textGruvboxDarkSmall.svg');
}

.catppuccinFrappe {
  --primary-text-color: #c6d0f5;
  --secondary-text-color: #c6d0f5;
  --tertiary-text-color: #a5adce;
  --title-color: #c6d0f5;
  --bg-color: #303446;
  --favorite-icon-color: #0f0;
  --card-bg-color: #292c3c;
  --secondary-card-bg-color: #303446;
  --scrollbar-color: #414559;
  --scrollbar-color-hover: #515569;
  --side-nav-color: #292c3c;
  --side-nav-hover-color: #232634;
  --side-nav-active-color: #232634;
  --search-bar-color: #414559;
  --logo-icon: url('../../_icons/iconCatppuccinFrappeLightSmall.svg');
  --logo-text: url('../../_icons/textCatppuccinFrappeLightSmall.svg');
}

.everforestDarkHard {
  --primary-text-color: #d3c6aa;
  --secondary-text-color: #d3c6aa;
  --tertiary-text-color: #d3c6aa;
  --title-color: #d3c6aa;
  --bg-color: #272e33;
  --favorite-icon-color: #0f0;
  --card-bg-color: #1e2326;
  --secondary-card-bg-color: #272e33;
  --scrollbar-color: #394146;
  --scrollbar-color-hover: #3f4b48;
  --side-nav-color: #1e2326;
  --side-nav-hover-color: #0e1316;
  --side-nav-active-color: #0e1316;
  --search-bar-color: #2e383c;
  --logo-icon: url('../../_icons/iconEverforestLightHardSmall.svg');
  --logo-text: url('../../_icons/textEverforestLightHardSmall.svg');
}
/* ... */

